<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">v2droid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dark">V2EX</string>
    <string name="light">Light</string>
    <string name="mixed">Mixed</string>
    <string name="select_browser">Select a browser</string>
    <string name="v2ex">关于V2EX</string>
    <string name="write_to_developers">联系开发者</string>
    <string name="about">关于</string>
    <string name="newtopic">新建</string>
    <string name="refresh">刷新</string>
    <string name="topic">主题</string>
    <string name="content">内容</string>
    <string name="favourite_on">收藏成功</string>
    <string name="favourite_off">取消收藏</string>
    <string name="favourite_failed">操作失败</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="username_text">用户名</string>
    <string name="password_text">密码</string>
    <string name="more">More...</string>
    <string name="reply_hint">输入回复</string>
    <string name="reply">回复</string>
    <string name="user">用户</string>
    <string name="favorite">收藏夹</string>
    <string name="setting">设置</string>
    <string name="msg_login_usr_null">请输入用户名</string>
    <string name="msg_login_pwd_null">请输入密码</string>
    <string name="msg_login_fail">登入失败，请重试</string>
    <string name="http_status_code_error">http_status_code_error</string>
    <string name="http_exception_error">http_exception_error</string>
    <string name="socket_exception_error">socket_exception_error</string>
    <string name="network_not_connected">network_not_connected</string>
    <string name="xml_parser_failed">xml_parser_failed</string>
    <string name="io_exception_error">io_exception_error</string>
    <string name="app_run_code_error">app_run_code_error</string>
    <string name="send">发送</string>
    <string name="node_hint">输入节点</string>
    <string name="title_hint">输入标题</string>
    <string name="content_hint">输入内容</string>
    <string name="node">节点</string>
    <string name="title">主题</string>
    <string name="content">内容</string>
    <string name="message">消息</string>
    <string name="select_email_programm">选择email程序</string>
    <string name="load_failed">对不住，没加载成功，刷新一下试试～～</string>
    <string name="no_more">没有更多啦...</string>
    <string name="send_failed">sorry，好像没发成功...</string>

</resources>